--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   db:
     image: postgres
     volumes:
-      - .:/var/lib/postgresql/data
+      - ./tmp/db:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: password
   redis:
@@ -11,8 +11,8 @@ services:
   web:
     build: .
     volumes:
-      - ./:/myapp
-    command: bash -c "rm -f pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+      - .:/myapp
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     ports:
       - "3000:3000"
     depends_on:
