--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
       DATABASE_HOST: db
+      POSTGRES_USER: open-flights
       POSTGRES_PASSWORD: password
   redis:
     image: redis
