--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
       DATABASE_HOST: db
-      POSTGRES_USER: open-flights
+      #POSTGRES_USER: open-flights
       POSTGRES_PASSWORD: password
   redis:
     image: redis
@@ -17,5 +17,7 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     ports:
       - "3000:3000"
+    env_file:
+      - .env
     depends_on:
       - db
