--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
-      DATABASE_HOST: db
+      #DATABASE_HOST: db
       #POSTGRES_USER: open-flights
       POSTGRES_PASSWORD: password
   redis:
